# protostar-works

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: tests.yml
annwfn/: Cargo.toml
annwfn/src/: circuit.rs  committer.rs  lib.rs  storage.rs
awaiting-runtime/: Cargo.toml
awaiting-runtime/src/: executor.rs  lib.rs  task.rs
benches/: bench_ecmul.rs  bench_poseidons.rs  bench_valid_witness.rs
cli/: Cargo.toml
cli/commands/: Cargo.toml
cli/commands/src/: lib.rs
cli/src/: main.rs
gate_macro/: Cargo.toml
gate_macro/src/: lib.rs
src/: circuit.rs  commitment.rs  constraint_system.rs  exec.rs  external_interface.rs  gadget.rs  gate.rs  gatelib.rs  lib.rs  prover.rs  subroutine.rs  test.rs  witness.rs
src/folding/: encode.rs  hasher.rs  mod.rs  oracle.rs  poseidon.rs  prover.rs  shape.rs
src/gadgets/: arith.rs  bit_chunks.rs  bits.rs  cyclefold.rs  ecmul.rs  folding_utils.rs  foreign_circuit_component.rs  input.rs  lc.rs  lookup.rs  mod.rs  nonzero_check.rs  poseidon.rs  range.rs  rangecheck_common.rs  rangecheck_lookup.rs  rangecheck_small.rs  running_prod.rs
src/precomputes/: mod.rs  powers_of_omega.rs
src/precomputes/precomp_scripts/: script.rs
src/utils/: arith_helper.rs  cross_terms_combination.rs  discrete_ray.rs  field_precomp.rs  field_utils.rs  gcd.rs  half_squares.rs  inv_lagrange_prod.rs  mod.rs  poly_utils.rs  powers_of_omega.rs
src/utils/precomp_scripts/: script.rs
typed_exec_graph/: Cargo.toml
typed_exec_graph/src/: exec_graph.rs  lib.rs
