[package]
name = "protostar_works"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gate_macro = { path = "gate_macro" }

elsa = "1.9.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2" }
poseidon-rs = "0.0.10"
group = "0.13"
ff = "0.13"
subtle = { version = "2.3", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rayon-core = "1.11.0"
itertools = "0.11.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
sanity-check = []
info = []
default = ["sanity-check"]

[[bench]]
name = "bench_poseidons"
harness = false

[[bench]]
name = "bench_ecmul"
harness = false
